Line item date fucntional

--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -21,6 +21,9 @@ en:
       quote:
         create: Create quote
         update: Update quote
+      line_item_date:
+        create: Create date
+        update: Update date
     # Examples
     # labels:
     #   defaults:
