--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -1,22 +1,26 @@
 en:
   simple_form:
-    "yes": 'Yes'
-    "no": 'No'
     placeholders:
       quote:
         name: Name of your quote
+      line_item:
+        name: Name of your item
+        description: Description (optional)
+        quantity: 1
+        unit_price: $100.00
     labels:
       quote:
         name: Name
-    required:
-      text: 'required'
-      mark: '*'
-      # You can uncomment the line below if you need to overwrite the whole required html.
-      # When using html, text and mark won't be used.
-      # html: '<abbr title="required">*</abbr>'
-    error_notification:
-      default_message: "Please review the problems below:"
-    helpers:
+      line_item_date:
+        date: Date
+      line_item:
+        name: Name
+        description: Description
+        quantity: Quantity
+        unit_price: Unit price
+
+
+  helpers:
     submit:
       quote:
         create: Create quote
@@ -24,22 +28,6 @@ en:
       line_item_date:
         create: Create date
         update: Update date
-    # Examples
-    # labels:
-    #   defaults:
-    #     password: 'Password'
-    #   user:
-    #     new:
-    #       email: 'E-mail to sign in.'
-    #     edit:
-    #       email: 'E-mail.'
-    # hints:
-    #   defaults:
-    #     username: 'User name to sign in.'
-    #     password: 'No special characters, please.'
-    # include_blanks:
-    #   defaults:
-    #     age: 'Rather not say'
-    # prompts:
-    #   defaults:
-    #     age: 'Select your age'
+      line_item:
+        create: Create item
+        update: Update item
